--- a/ui/package.json
+++ b/ui/package.json
@@ -20,9 +20,10 @@
     "svelte-preprocess": "^4.7.0"
   },
   "dependencies": {
-    "autoprefixer": "^9",
-    "postcss": "^7",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.9",
+    "postcss-cli": "^8.3.1",
     "sirv-cli": "^1.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^2.0.4"
   }
 }
